data/derived/fa15/progs/unify/prog3073.ml.out
Characters 129-131:
  | Cosine e1 -> cos(pi*.(eval e1))
                               ^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
